<resources>
    <string name="app_name">DemoPlantform</string>
    <string name="operation_des">点击每个按键移动10个px</string>
    <string name="bitmapregiondecoder_activity">BitmapRegionDecoder演示</string>
    <string name="snackbar_activity">SnackBar演示</string>
    <string name="image_activity">图片常用操作</string>
    <string name="service_activity">服务Demo</string>
    <string name="notification_activity">通知Demo</string>
    <string name="translucent_activity">沉浸式Demo</string>
    <string name="transition_activity">页面跳转共享元素</string>
    <string name="eventbus_activity">EventBus Demo</string>

    //service_activity
    <string name="bind_service">绑定本地服务</string>
    <string name="unbind_service">解绑本地服务</string>
    <string name="start_service">开启远程服务</string>
    <string name="kill_service">关闭远程服务</string>
    <string name="start_intent_service">开启本地服务</string>

    //notification_activity
    <string name="default_notification">开启默认配置通知</string>
    <string name="patial_custome_notification">开启部分定制通知</string>
    <string name="remoteviews_custome_notification">开启RemoteViews通知</string>

    //menu
    <string name="menu_cake">蛋糕</string>
    <string name="menu_group">分组</string>
    <string name="menu_mood">心情</string>
    <string name="menu_notifications">通知</string>
    <string name="menu_pages">翻页</string>

    <string name="input_tip">请输入需要分发的消息</string>
    <string name="send_main_thread">主线程发送</string>
    <string name="send_work_thread">工作线程发送</string>

    <string name="start_other_activity">跳转到其它页面</string>
</resources>
