<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/btn_bitmapregiondecoder"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/bitmapregiondecoder_activity"/>

    <Button
        android:id="@+id/btn_snackbar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/btn_bitmapregiondecoder"
        android:text="@string/snackbar_activity"/>
    <Button
        android:id="@+id/btn_image"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/btn_snackbar"
        android:text="@string/image_activity"/>
    <Button
        android:id="@+id/btn_service"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/btn_image"
        android:text="@string/service_activity"/>
</RelativeLayout>
