<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.ServiceActivity">
    <Button
        android:id="@+id/btnBindService"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/bind_service"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btnUnBindService"
        android:layout_width="wrap_content"
        android:layout_below="@+id/btnBindService"
        android:layout_height="48dp"
        android:text="@string/unbind_service"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btnStartService"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/btnUnBindService"
        android:text="@string/start_service"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btnKillService"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/btnStartService"
        android:text="@string/kill_service"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btnStartIntentService"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/btnKillService"
        android:text="@string/start_intent_service"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tvServiceFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
