<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.leo.demoplantform.ui.eventBus.EventBusActivity1">

    <EditText
        android:id="@+id/textContent"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/input_tip"/>

    <Button
        android:id="@+id/btnSendMainThread"
        style="@style/DefaultButtonStyle"
        android:layout_below="@+id/textContent"
        android:layout_centerHorizontal="true"
        android:text="@string/send_main_thread"/>

    <Button
        android:id="@+id/btnSendWorkThread"
        style="@style/DefaultButtonStyle"
        android:layout_below="@+id/btnSendMainThread"
        android:layout_centerHorizontal="true"
        android:text="@string/send_work_thread"/>

    <Button
        android:id="@+id/btnStartOtherActivity"
        style="@style/DefaultButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/start_other_activity"/>

</RelativeLayout>
