<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.leo.demoplantform.ui.NotificationActivity">

    <Button
        android:id="@+id/btnDefaultNotification"
        style="@style/DefaultButtonStyle"
        android:text="@string/default_notification"/>

    <Button
        android:id="@+id/btnPatialCustomeNotification"
        style="@style/DefaultButtonStyle"
        android:layout_below="@+id/btnDefaultNotification"
        android:text="@string/patial_custome_notification"/>
    <Button
        android:id="@+id/btnRemoteViewsNotification"
        style="@style/DefaultButtonStyle"
        android:layout_below="@+id/btnPatialCustomeNotification"
        android:text="@string/remoteviews_custome_notification"/>

</RelativeLayout>
